# googlesearch-mcp

./: LICENSE  README.md  pyproject.toml
src/googlesearch_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  stdio_client.py  test_stdio_extended.py  test_stdio_protocol.py  test_tool_logic.py
